<resources>
    <string name="app_name">Implicit Intens</string>

    <string name="EditText_uri">http://developer.android.com</string>
    <string name="button_uri">Open Website</string>

    <string name="EditText_loc">Golden Gate Bridge</string>
    <string name="button_loc">Open Location</string>

    <string name="EditText_share">Twas brillig and the slithy toves</string>
    <string name="button_share">Share This Text</string>


</resources>
