<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/website_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/EditText_uri"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="10dp" />

    <Button
        android:id="@+id/open_website_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="4dp"
        android:text="@string/button_uri"
        android:onClick="openWebsite"
        android:layout_marginStart="10dp" />

    <TextView
        android:id="@+id/location_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/EditText_loc"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp" />

    <Button
        android:id="@+id/open_location_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="4dp"
        android:text="@string/button_loc"
        android:onClick="openLocation"
        android:layout_marginStart="10dp" />

    <TextView
        android:id="@+id/share_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/EditText_share"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp" />

    <Button
        android:id="@+id/share_button_text"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="4dp"
        android:text="@string/button_share"
        android:layout_marginStart="10dp" />

</LinearLayout>